# ETD

./: .gitignore  .gitmodules  README.md  author_train_tdd_KCS6R3.sh  author_train_tdd_MAZES5.sh  ela_fms5.patch.diff  pyproject.toml  requirements.txt  train_batch_tdd.sh  train_count_KCS6R3.sh  train_count_MAZES5.sh  train_deir_KCS6R3.sh  train_deir_MAZES5.sh  train_erelela_KCS6R3.sh  train_erelela_MAZES5.sh  train_erelela_MRN7S4.sh  train_erelela_rgep16_rexpr60_KCS6R3.sh  train_erelela_rgep64_rexpr60_KCS6R3.sh  train_nooptim_erelela_KCS6R3.sh  train_rnd_KCS6R3.sh  train_tdd.sh  train_tdd_KCS6R3.sh  train_tdd_MAZES5.sh  train_tdd_MRN7S4.sh
configs/: fullmaze_S5_miniword_wandb_SmallETD_benchmark_AgnosticPOMDPERELELA_config.yaml  keycorridor_S3_R3_minigrid_wandb_ETD_benchmark_AgnosticPOMDPERELELA_config.yaml  keycorridor_S3_R3_minigrid_wandb_SmallETD_benchmark_AgnosticPOMDPERELELA_config.yaml  multiroom_N7_S4_minigrid_wandb_SmallETD_benchmark_AgnosticPOMDPERELELA_config.yaml
ppo_etd/: __init__.py  train.py
ppo_etd/algo/: ppo_model.py  ppo_rollout.py  ppo_trainer.py
ppo_etd/algo/buffers/: ppo_buffer.py  type_aliases.py
ppo_etd/algo/common_models/: cnns.py  gru_cell.py  mlps.py
ppo_etd/algo/intrinsic_rewards/: base_model.py  count.py  deir.py  e3b.py  erelela.py  erelela_helper.py  icm.py  ngu.py  noveld.py  plain_forward.py  plain_inverse.py  rnd.py  tdd.py
ppo_etd/env/: custom_vec_envs.py  minigrid_envs.py  subproc_vec_env.py
ppo_etd/env/dmc/: __init__.py  dmc.py  flat.py
ppo_etd/utils/: common_func.py  configs.py  enum_types.py  wandb_utils.py
(+1 files in other folders)
